# rpkm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  deno.json  pyproject.toml
docs/superpowers/plans/: 2026-07-06-markdowndb.md
docs/superpowers/specs/: 2026-07-06-markdowndb-design.md
src/lib/: init.ts  lint.ts  mcp.ts
src/lib/utils/: errors.ts  git.ts  logger.ts  mddb.ts  prek.ts
src/mcp/: __main__.py  server.py
src/pkm/mcp/: __main__.py
